2006-09-07  Andreas Kupries <andreask@activestate.com>

	* unix/configure: Regenerated using autoconf 2.13.

2006-09-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* unix/tclUnixChan.c   Rewritten MT-safe wrappers to
	* unix/tclUnixCompat.c return ptrs to TSD storage
	* unix/tclUnixFCmd.c   making them all look like their
	* unix/tclUnixPort.h   MT-unsafe pendants API-wise.
	* unix/tclUnixSock.c   

2006-09-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* unix/tclUnixChan.c: Added TCL_THREADS ifdef'ed  usage
	* unix/tclUnixFCmd.c: of MT-safe calls like:
	* unix/tclUnixSock.c: getpwuid, getpwnam, getgrgid, getgrnam,
	* unix/tclUnixPort.h: gethostbyname and gethostbyaddr.
	* unix/Makefile.in:   See Tcl Bug: 999544
	* unix/configure.in:
	* unix/tcl.m4:
	* unix/configure: Regenerated.

	* unix/tclUnixCompat.c: New file containing MT-safe implementation
	of some library calls.

2006-09-04  Don Porter  <dgp@users.sourceforge.net>

	* tests/main.text (Tcl_Main-4.4):       Test corrected to not be
        timing sensitive to the Bug 1481986 fix. [Bug 1550858]

2006-09-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/package.n: correct package example

2006-08-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinChan.c: [Bug 819667] Improve logic for identifying COM
	ports.

	* win/tclWinFCmd.c:    [Bug 1548263] Added test for NULL return
	* generic/tclIOUtil.c: from Tcl_FSGetNormalizedPath which was
	causing segv's

	* generic/tclFileName.c (TclDoGlob): match incr with existing decr.

	* unix/Makefile.in: add valgrindshell target and update default
	VALGRINDARGS.  User can override, or add to it with VALGRIND_OPTS
	env var.

	* generic/tclBasic.c (Tcl_CreateInterp): init iPtr->threadId

	* generic/tclIOGT.c (ExecuteCallback): 
	* generic/tclPkg.c (Tcl_PkgRequireEx): replace Tcl_GlobalEval(Obj)
	with more efficient Tcl_Eval(Obj)Ex

2006-08-22  Andreas Kupries <andreask@activestate.com>

	* unix/tclUnixNotfy.c (Tcl_WaitForEvent): Fixed broken if syntax